syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.delegacy.youngbot.protocol.hello";

package youngbot.hello;

service HelloService {
  rpc Hello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
